kubernetes/apps/default/adventurelog/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adventurelog-frontend
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - adventurelog.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adventurelog
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adventurelog-backend
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - adventurelog-backend.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adventurelog
          port: 8000
